fix: create new event now goes to the event
edit also returns to the event

bonus: event table doesn't look so wonky

--- a/frontend/src/css/table.css
+++ b/frontend/src/css/table.css
@@ -53,10 +53,6 @@ td.thumbnail {
 }
 
 .events {
-  table {
-    margin: 0 5vw;
-  }
-
   thead, tr {
     grid-template-columns: repeat(5, 1fr)
   }
